--- a/style.css
+++ b/style.css
@@ -5,6 +5,23 @@ body {
     flex-direction: column;
 }
 
+.header-text {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: 800;
+}
+
+.header a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.header,
+.hero {
+    background-color: #1f2937;
+}
+
 .content {
     flex-grow: 1;
 }
