--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@ body {
     flex-direction: column;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    gap: 10px;
+    outline: solid red;
+}
+
+.header-link-one {
+    margin-left: auto;
+}
+
 .header-text {
     font-size: 24px;
     color: #f9faf8;
