--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     align-items: center;
     padding: 20px;
     gap: 10px;
-    outline: solid red;
 }
 
 .header-link-one {
@@ -36,4 +35,39 @@ body {
 
 .content {
     flex-grow: 1;
+}
+
+.hero {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 100px;
+}
+
+.hero-header,
+.hero-text {
+    color: #f9faf8;
+}
+
+.hero-header {
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.hero-left {
+    flex: 0 1 35%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.hero-right {
+    height: 350px;
+    max-width: auto;
+    flex: 0 1 auto;
+}
+
+.hero-signup-button {
+   align-self: flex-start;
 }
