--- a/style.css
+++ b/style.css
@@ -148,3 +148,14 @@ body {
     font-size: 18px;
     border-radius: 5px;
 }
+
+.footer {
+    padding: 30px 0px;
+    text-align: center;
+    background-color: #1f2937;
+    color: #e5e7eb;
+}
+
+.footer a {
+    color: #e5e7eb;
+}
