--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ body {
     color: #f9faf8;
 }
 
+.hero-text {
+    font-size: 18px;
+}
+
 .hero-header {
     font-size: 48px;
     font-weight: 800;
@@ -93,6 +97,10 @@ body {
     width: 130px;
 }
 
+.icon-text {
+    font-size: 18px;
+}
+
 .bold-text {
     font-weight: 800;
     color: #1f2937;
@@ -107,6 +115,7 @@ body {
 
 .quote-attribution {
     text-align: right;
+    font-size: 24px;
     font-weight: 800;
 }
 
