--- a/style.css
+++ b/style.css
@@ -73,8 +73,15 @@ body {
     flex: 0 1 auto;
 }
 
-.hero-signup-button {
-   align-self: flex-start;
+.hero-signup-link {
+    align-self: flex-start;
+    background-color: #3882f6;
+    color: #f9faf8;
+    text-decoration: none;
+    font-weight: 800;
+    padding: 5px 30px;
+    font-size: 18px;
+    border-radius: 5px;
 }
 
 .info-header {
