Refactor header for a more flexible layout
Header now correctly matches spec image and has a cleaner layout with
flex rather than relying on an auto margin applied to a single element.

--- a/style.css
+++ b/style.css
@@ -8,13 +8,21 @@ body {
 
 .header {
     display: flex;
-    align-items: center;
-    padding: 20px;
-    gap: 10px;
+    justify-content: center;
+    padding-top: 20px;
 }
 
-.header-link-one {
-    margin-left: auto;
+.header-container {
+    flex-basis: 75%; 
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-left,
+.header-right {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .header-text {
