--- a/style.css
+++ b/style.css
@@ -48,9 +48,16 @@ body {
 
 .hero {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    padding: 50px 0px 100px;
+}
+
+.hero-container {
+    flex-basis: 75%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    padding: 100px;
 }
 
 .hero-header,
@@ -68,7 +75,7 @@ body {
 }
 
 .hero-left {
-    flex: 0 1 35%;
+    flex-basis: 45%;
 
     display: flex;
     flex-direction: column;
@@ -76,9 +83,8 @@ body {
 }
 
 .hero-right {
-    height: 350px;
-    max-width: auto;
-    flex: 0 1 auto;
+    flex-basis: 45%;
+    text-align: center;
 }
 
 .hero-signup-link {
